// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can add item from any value 1`] = `
Array [
  <div
    aria-expanded={false}
    className="ui selection dropdown sortable-field"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="listbox"
    tabIndex={0}
  >
    <div
      aria-atomic={true}
      aria-live="polite"
      className="text"
      role="alert"
    />
    <i
      aria-hidden="true"
      className="dropdown icon"
      onClick={[Function]}
    />
    <div
      className="menu transition"
    />
  </div>,
  <div
    className="ui divided ordered list"
    role="list"
  />,
]
`;

exports[`Can add item from any value 2`] = `
Array [
  <div
    aria-expanded={false}
    className="ui selection dropdown sortable-field"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="listbox"
    tabIndex={0}
  >
    <div
      aria-atomic={true}
      aria-live="polite"
      className="text"
      role="alert"
    />
    <i
      aria-hidden="true"
      className="dropdown icon"
      onClick={[Function]}
    />
    <div
      className="menu transition"
    />
  </div>,
  <div
    className="ui divided ordered list"
    role="list"
  >
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
    >
      New Value
      <i
        aria-hidden="true"
        className="close icon"
        onClick={[Function]}
      />
    </div>
  </div>,
]
`;

exports[`Can add item from options 1`] = `
Array [
  <div
    aria-expanded={false}
    className="ui selection dropdown sortable-field"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="listbox"
    tabIndex={0}
  >
    <div
      aria-atomic={true}
      aria-live="polite"
      className="text"
      role="alert"
    />
    <i
      aria-hidden="true"
      className="dropdown icon"
      onClick={[Function]}
    />
    <div
      className="menu transition"
    />
  </div>,
  <div
    className="ui divided ordered list"
    role="list"
  />,
]
`;

exports[`Can add item from options 2`] = `
Array [
  <div
    aria-expanded={false}
    className="ui selection dropdown sortable-field"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="listbox"
    tabIndex={0}
  >
    <div
      aria-atomic={true}
      aria-live="polite"
      className="text"
      role="alert"
    />
    <i
      aria-hidden="true"
      className="dropdown icon"
      onClick={[Function]}
    />
    <div
      className="menu transition"
    />
  </div>,
  <div
    className="ui divided ordered list"
    role="list"
  >
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
    >
      Option 2
      <i
        aria-hidden="true"
        className="close icon"
        onClick={[Function]}
      />
    </div>
  </div>,
]
`;

exports[`Can change order of the items 1`] = `
Array [
  <div
    aria-expanded={false}
    className="ui selection dropdown sortable-field"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="listbox"
    tabIndex={0}
  >
    <div
      aria-atomic={true}
      aria-live="polite"
      className="text"
      role="alert"
    />
    <i
      aria-hidden="true"
      className="dropdown icon"
      onClick={[Function]}
    />
    <div
      className="menu transition"
    />
  </div>,
  <div
    className="ui divided ordered list"
    role="list"
  >
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
    >
      Option 1
      <i
        aria-hidden="true"
        className="close icon"
        onClick={[Function]}
      />
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
    >
      Option 2
      <i
        aria-hidden="true"
        className="close icon"
        onClick={[Function]}
      />
    </div>
  </div>,
]
`;

exports[`Can change order of the items 2`] = `
Array [
  <div
    aria-expanded={false}
    className="ui selection dropdown sortable-field"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="listbox"
    tabIndex={0}
  >
    <div
      aria-atomic={true}
      aria-live="polite"
      className="text"
      role="alert"
    />
    <i
      aria-hidden="true"
      className="dropdown icon"
      onClick={[Function]}
    />
    <div
      className="menu transition"
    />
  </div>,
  <div
    className="ui divided ordered list"
    role="list"
  >
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
    >
      Option 2
      <i
        aria-hidden="true"
        className="close icon"
        onClick={[Function]}
      />
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
    >
      Option 1
      <i
        aria-hidden="true"
        className="close icon"
        onClick={[Function]}
      />
    </div>
  </div>,
]
`;

exports[`Can remove item 1`] = `
Array [
  <div
    aria-expanded={false}
    className="ui selection dropdown sortable-field"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="listbox"
    tabIndex={0}
  >
    <div
      aria-atomic={true}
      aria-live="polite"
      className="text"
      role="alert"
    />
    <i
      aria-hidden="true"
      className="dropdown icon"
      onClick={[Function]}
    />
    <div
      className="menu transition"
    />
  </div>,
  <div
    className="ui divided ordered list"
    role="list"
  >
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
    >
      Option 1
      <i
        aria-hidden="true"
        className="close icon"
        onClick={[Function]}
      />
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
    >
      Option 2
      <i
        aria-hidden="true"
        className="close icon"
        onClick={[Function]}
      />
    </div>
  </div>,
]
`;

exports[`Can remove item 2`] = `
Array [
  <div
    aria-expanded={false}
    className="ui selection dropdown sortable-field"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="listbox"
    tabIndex={0}
  >
    <div
      aria-atomic={true}
      aria-live="polite"
      className="text"
      role="alert"
    />
    <i
      aria-hidden="true"
      className="dropdown icon"
      onClick={[Function]}
    />
    <div
      className="menu transition"
    />
  </div>,
  <div
    className="ui divided ordered list"
    role="list"
  >
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
    >
      Option 2
      <i
        aria-hidden="true"
        className="close icon"
        onClick={[Function]}
      />
    </div>
  </div>,
]
`;
